force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/ucinn_portal_Recipient_Filter__c.object-meta.xml
<CustomObject>
    <label>Recipient Filter</label>
    <nameField>
        <label>Recipient Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>