force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Contact_Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup_Field_API_Name__c</fullName>
    <label>Contact Lookup Field API Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>