force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Contact_Relationship_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship_Api_Name__c</fullName>
    <label>Contact Relationship Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>