force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ucinn_ascendv2__Primary_Contact_Type__c</fullName>
                <label>Primary Constituent Type</label>
            </value>
            <value>
                <fullName>ucinn_ascendv2__Contact_Type__c</fullName>
                <label>Constituent Type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>