force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Field_Logic__c.field-meta.xml
<CustomField>
    <fullName>Field_Logic__c</fullName>
    <label>Field Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>