force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Filter_Type</valueSetName>
    </valueSet>
</CustomField>