force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Has_Multiple_Fields__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multiple Fields</label>
    <type>Checkbox</type>
</CustomField>