force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <referenceTo>ucinn_portal_Recipient__c</referenceTo>
    <relationshipLabel>Recipient Filters</relationshipLabel>
    <relationshipName>ucinn_portal_Recipient_Filters_Recipient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>