force-app/main/default/objects/ucinn_portal_Recipient_Filter__c/fields/Result_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Result_API_Name__c</fullName>
    <label>Result API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>